# SemantixRAG

./: .env.example  .gitignore  DEPENDENCY_FIXES.md  FINAL_DELIVERABLES.md  LICENSE  MANIFEST.in  PYPI_PUBLICATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  RESOURCE_LOADER_EXAMPLES.py  fix_wheel_metadata.py  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
config/opa/: access.rego  audit.rego  masking.rego
docker/: Dockerfile  docker-compose.yml  opensearch.yml
documents/: sample_document.md
src/: __init__.py  models.py  pipeline.py
src/api/: __init__.py
src/api/routes/: compliance.py  ingestion.py
src/cdc/: incremental.py  watcher.py
src/chunking/: __init__.py  enricher.py
src/compliance/: __init__.py  dsar.py  pii_scanner.py
src/embeddings/: embedder.py
src/extractors/: __init__.py  multimodal_extractor.py  unstructured_extractor.py
src/indexing/: bulk_indexer.py  connection.py  hybrid_search.py  index_manager.py
src/knowledge/: entity_extractor.py
src/monitoring/: logger.py
src/observability/: __init__.py  evaluator.py
src/semantixrag/: __main__.py  cli.py  models.py  pipeline.py  resources.py
src/semantixrag/api/: main.py
src/semantixrag/api/routes/: admin.py  observability.py  retrieval.py
src/semantixrag/cdc/: __init__.py  incremental.py  watcher.py
src/semantixrag/chunking/: header_splitter.py
src/semantixrag/compliance/: masking.py
src/semantixrag/config/: settings.py
src/semantixrag/embeddings/: __init__.py
src/semantixrag/extractors/: base.py  table_extractor.py
src/semantixrag/indexing/: __init__.py  bulk_indexer.py  connection.py  graph_writer.py  hybrid_search.py  index_manager.py
src/semantixrag/knowledge/: __init__.py  ontology.py
src/semantixrag/monitoring/: __init__.py  logger.py
src/semantixrag/observability/: metrics.py  tracer.py
tests/: test_compliance.py  test_knowledge.py  test_observability.py
